--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,66 @@
-<p>dinamicos works!</p>
+<h2>Template: <small> Dinamicos</small></h2>
+<hr>
+
+<form (ngSubmit)="guardar()" autocomplete="off" #formularioDinamico="ngForm">
+  <!-- Nombre -->
+  <div class="row mb-3">
+    <label for="" class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input required
+             placeholder="Nombre de la persona"
+             [ngModel]="persona.nombre"
+             name="nombre"
+             class="form-control">
+          <span *ngIf="nombreValido()" class="form-text text-danger">
+                Este campo es obligatorio
+          </span>
+    </div>
+  </div>
+
+  <!-- Agregar -->
+  <div class="row mb-3">
+    <label for="" class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input  placeholder="Agregar favorito"
+                class="form-control"
+                name="nuevoJuego"
+                (keyup.enter)="agregar()"
+                [(ngModel)]="nuevoJuego">
+        <button class="btn btn-outline-primary"
+                type="button"
+                (click)="agregar()">Agregar</button>
+      </div>
+
+    </div>
+  </div>
+
+<!-- Lista de juegos favoritos -->
+  <div class="row mb-3">
+    <label for="" class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9">
+      <div *ngFor="let juego of persona.favoritos; let i= index" class="input-group mb-1">
+        <input class="form-control"
+               [name]="juego.nombre + i"
+               [(ngModel)]="juego.nombre">
+          <button type="button"
+                  class="btn btn-outline-danger"
+                  (click)="eliminar(i)">
+            Eliminar
+          </button>
+        </div>
+      </div>
+  </div>
+  <!-- ... -->
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="button"
+              class="btn btn-primary float-end"
+              (click)="guardar()"
+              [disabled]="formularioDinamico.invalid || persona.favoritos.length===0">
+          Guardar
+      </button>
+    </div>
+  </div>
+</form>
