--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -1,1 +1,84 @@
-<p>switches works!</p>
+<h2>Template: <small>Switches</small></h2>
+<hr>
+
+<form #miFormulario="ngForm">
+  <!-- radios -->
+  <div class="row mb-3">
+      <label class="col-sm-3 col-form-label">Genero</label>
+
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input  class="form-check-input"
+                required
+                type="radio"
+                value="M"
+                [(ngModel)]="persona.genero"
+                name="radioGenero"
+                id="radioMaculino">
+        <label class="form-check-label" for="radioMaculino">
+          Masculino
+        </label>
+      </div>
+      <div class="form-check">
+        <input  class="form-check-input"
+                required
+                type="radio"
+                value="F"
+                [(ngModel)]="persona.genero"
+                name="radioGenero"
+                id="radioFemenino">
+        <label class="form-check-label" for="radioFemenino">
+          Femenino
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <!-- Switches -->
+  <div class="row mb-3">
+      <label class="col-sm-3 col-form-label">Notificaciones</label>
+
+    <div class="col-sm-9">
+      <div class="form-check form-switch mt-2">
+        <input  class="form-check-input"
+                type="checkbox"
+                [(ngModel)]="persona.notificaciones"
+                name="notificaciones"
+                id="flexSwitchCheckChecked">
+        <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- checkbox -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"></label>
+      <div class="col-sm-9">
+        <div class="form-check">
+          <input  class="form-check-input"
+                  type="checkbox"
+                  name="terminos"
+                  required
+                  [(ngModel)]="terminosYCondiciones"
+                  id="defaultCheck1">
+          <label class="form-check-label" for="defaultCheck1">
+            Terminos y condiciones de uso
+          </label>
+        </div>
+      </div>
+    </div>
+
+    <!-- boton submit -->
+    <div class="row">
+      <div class="col d-flex justify-content-center pt-4">
+        <button class="btn btn-primary"
+                [disabled]="miFormulario.invalid">
+          Guardar
+        </button>
+      </div>
+    </div>
+
+</form>
+
+
