formularios reactivos terminados

--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -72,7 +72,7 @@
     <!-- boton submit -->
     <div class="row">
       <div class="col d-flex justify-content-center pt-4">
-        <button class="btn btn-primary"
+        <button class="btn text-light btn-primary"
                 [disabled]="miFormulario.invalid">
           Guardar
         </button>
