--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,64 @@
-<p>basicos works!</p>
+<h2>Reactive: <small>Basicos</small></h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <form (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario">
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Producto</label>
+        <div class="col-sm-9">
+
+          <input type="text"
+                 class= "form-control"
+                 formControlName="nombre"
+                 placeholder="Nombre de producto">
+          <span class="form-text text-danger"
+                *ngIf="campoNoValido('nombre')">
+                Debe de ser de 3 letras
+          </span>
+        </div>
+      </div>
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Precio</label>
+        <div class="col-sm-9">
+          <input type="number"
+                 class= "form-control"
+                 formControlName="precio"
+                 placeholder="Precio del producto">
+          <span *ngIf="campoNoValido('precio')"
+                class="form-text text-danger">
+                El precio debe de ser igual o mayor a cero
+          </span>
+        </div>
+      </div>
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Existencias</label>
+        <div class="col-sm-9">
+          <input type="number"
+                 class= "form-control"
+                 formControlName="existencias"
+                 placeholder="Existencias del producto">
+            <span *ngIf="campoNoValido('existencias')"
+                  class="form-text text-danger">
+                  Existencias debe de ser igual o mayor a cero
+           </span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <button type="submit"
+                  class="btn btn-primary text-light float-end">
+            Guardar
+          </button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+
