--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,69 @@
-<p>dinamicos works!</p>
+<h2>Reactive: <small> Dinamicos</small></h2>
+<hr>
+
+<form (ngSubmit)="guardar()" autocomplete="off" [formGroup]= "miFormulario">
+  <!-- Nombre -->
+  <div class="row mb-3">
+    <label for="" class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input placeholder="Nombre de la persona"
+             formControlName="nombre"
+             class="form-control">
+          <span *ngIf="formularioInvalido('nombre')" class="form-text text-danger">
+                Este campo es obligatorio
+          </span>
+    </div>
+  </div>
+
+  <!-- Agregar -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9" >
+      <div class="input-group">
+        <input  placeholder="Agregar favorito"
+                class="form-control"
+                [formControl]="nuevoFavorito"
+                (keyUp.enter)="agregarFavorito()">
+
+        <button class="btn btn-outline-primary"
+                type="button"
+                (click)="agregarFavorito()">
+                Agregar
+        </button>
+      </div>
+      <span *ngIf="favoritosArr.length===0 && nuevoFavorito.touched" class="form-text text-danger">
+        Este campo es obligatorio
+  </span>
+    </div>
+  </div>
+
+<!-- Lista de juegos favoritos -->
+  <div class="row mb-3">
+    <label for="" class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9" formArrayName="favoritos">
+
+      <div class="input-group mb-1"
+            *ngFor="let favorito of favoritosArr.controls; let i = index">
+
+            <input class="form-control"
+              [formControlName]="i">
+
+          <button type="button"
+                  class="btn btn-outline-danger"
+                  (click)="borrar(i)">
+            Eliminar
+          </button>
+        </div>
+      </div>
+  </div>
+  <!-- ... -->
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="submit"
+              class="btn btn-primary text-light float-end">
+          Guardar
+      </button>
+    </div>
+  </div>
+</form>
