--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,83 @@
-<p>switches works!</p>
+<h2>Reactive: <small>Switches</small></h2>
+<hr>
+
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
+  <!-- radio -->
+  <div class="row mb-3">
+      <label class="col-sm-3 col-form-label">Genero</label>
+
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input  class="form-check-input"
+                required
+                type="radio"
+                value="M"
+                formControlName="genero"
+                id="radioMaculino">
+        <label class="form-check-label" for="radioMaculino">
+          Masculino
+        </label>
+      </div>
+      <div class="form-check">
+        <input  class="form-check-input"
+                required
+                type="radio"
+                value="F"
+                formControlName="genero"
+                id="radioFemenino">
+        <label class="form-check-label" for="radioFemenino">
+          Femenino
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <!-- Switches -->
+  <div class="row mb-3">
+      <label class="col-sm-3 col-form-label">Notificaciones</label>
+
+    <div class="col-sm-9">
+      <div class="form-check form-switch mt-2">
+        <input  class="form-check-input"
+                type="checkbox"
+                formControlName="notificaciones"
+                id="flexSwitchCheckChecked">
+        <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- checkbox -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"></label>
+      <div class="col-sm-9">
+        <div class="form-check">
+          <input  class="form-check-input"
+                  type="checkbox"
+                  formControlName="condiciones"
+                  required
+                  id="defaultCheck1">
+          <label class="form-check-label" for="defaultCheck1">
+            Terminos y condiciones de uso
+          </label>
+        </div>
+        <span *ngIf="campoNoValido('condiciones')"
+        class="form-text text-danger px-4">Debe aceptar las condiciones de uso</span>
+      </div>
+    </div>
+
+    <!-- boton submit -->
+    <div class="row">
+      <div class="col d-flex justify-content-center pt-4">
+        <button class="btn text-light btn-primary"
+                type="submit">
+          Guardar
+        </button>
+      </div>
+    </div>
+
+</form>
+
+
+
