--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -60,7 +60,7 @@
         <div class="col">
           <button type="submit"
                   [disabled]="miFormulario.invalid"
-                  class="btn btn-primary float-end">
+                  class="btn btn-primary text-light float-end">
             Guardar
           </button>
         </div>
