--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -56,7 +56,7 @@
   <div class="row">
     <div class="col-sm-12">
       <button type="button"
-              class="btn btn-primary float-end"
+              class="btn btn-primary text-light float-end"
               (click)="guardar()"
               [disabled]="formularioDinamico.invalid || persona.favoritos.length===0">
           Guardar
