--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -3,7 +3,8 @@
 </header>
 
 <hr>
-
+<h2 class="mt-3">Template</h2>
+<hr>
 <ul class="list-group">
   <li *ngFor="let item of templateMenu"
       class="list-group-item "
@@ -18,6 +19,17 @@
 
 <ul class="list-group">
   <li *ngFor="let item of reactiveMenu"
+      class="list-group-item "
+      [routerLink] ="[ item.ruta ]"
+      routerLinkActive='active'>
+    {{ item.texto }}
+  </li>
+</ul>
+
+<h2 class="mt-3">Auth</h2>
+<hr>
+<ul class="list-group">
+  <li *ngFor="let item of authMenu"
       class="list-group-item "
       [routerLink] ="[ item.ruta ]"
       routerLinkActive='active'>
